--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/microservices": "^10.3.10",
     "@nestjs/platform-express": "^10.3.10",
     "@nestjs/typeorm": "^10.0.2",
     "@types/bcryptjs": "^2.4.6",
