chore: Update transport to NATS and add NATS_SERVERS environment variable

--- a/.env.template
+++ b/.env.template
@@ -19,3 +19,6 @@ FIREBASE_AUTH_PROVIDER_X509_CERT_URL= #Firebase auth provider x509 cert url
 FIREBASE_CLIENT_X509_CERT_URL=  #Firebase client x509 cert url
 FIREBASE_UNIVERSE_DOMAIN= #Firebase universe domain
 FIREBASE_STORAGE_BUCKET= #Firebase storage bucket
+
+
+NATS_SERVERS= #Nats server url
